--- a/Android_Studio/Hero's_Graphs/app/src/main/res/layout/activity_jogo.xml
+++ b/Android_Studio/Hero's_Graphs/app/src/main/res/layout/activity_jogo.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".JogoActivity"
-    tools:layout_editor_absoluteY="73dp">
+    tools:layout_editor_absoluteY="73dp"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/textBemVindo"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
         android:padding="16dp"
         android:text="@string/bemVindo"
         android:textSize="18sp" />
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/teste1"
+        style="@android:style/Widget.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/teste1" />
+
+    <Button
+        android:id="@+id/teste2"
+        style="@android:style/Widget.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/teste2"
+        android:layout_gravity="center"/>
+
+
+</LinearLayout>
