--- a/Android_Studio/Hero's_Graphs/app/src/main/res/drawable/vertice_button.xml
+++ b/Android_Studio/Hero's_Graphs/app/src/main/res/drawable/vertice_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <stroke
-        android:width="@dimen/cardview_default_radius"
+        android:width="@dimen/borda_vertice"
         android:color="@color/colorAccent"/>
 
 
