--- a/Android_Studio/Hero's_Graphs/app/src/main/res/layout/fragment_grafo.xml
+++ b/Android_Studio/Hero's_Graphs/app/src/main/res/layout/fragment_grafo.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grafoLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GrafoFragment"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank fragment layout
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+    -->
+</LinearLayout>
