--- a/Android_Studio/Hero's_Graphs/app/src/main/res/layout/activity_monitoria.xml
+++ b/Android_Studio/Hero's_Graphs/app/src/main/res/layout/activity_monitoria.xml
@@ -11,7 +11,8 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/fab_margem_inferior"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
