--- a/Android_Studio/Hero's_Graphs/app/src/main/res/layout/fragment_grafo.xml
+++ b/Android_Studio/Hero's_Graphs/app/src/main/res/layout/fragment_grafo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grafoLayout"
     android:layout_width="match_parent"
@@ -14,4 +14,4 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
     -->
-</LinearLayout>
+</FrameLayout>
