--- a/Android_Studio/NavigationDrawer/app/src/main/res/layout/activity_main.xml
+++ b/Android_Studio/NavigationDrawer/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 
         <fragment
             android:id="@+id/fragment"
-            android:name="com.example.robotica.navigationdrawer.GrafoFragment"
+            android:name="com.example.robotica.navigationdrawer.CompositeSubjectGrafoFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </FrameLayout>
